// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScheduleVeteran Can cancel the form 1`] = `
<Fragment>
  <AppSegment
    filledBackground={true}
  >
    <h1>
      Schedule Appellant for a Hearing
    </h1>
    <div
      data-css-16cycjp=""
    />
    <div
      className="usa-width-one-half"
    >
      <HearingTypeDropdown
        requestType="Video"
      />
    </div>
    <div
      className="cf-help-divider usa-width-one-whole"
    />
    <div
      className="usa-width-one-half"
    >
      <div
        data-css-18v9q72=""
      >
        <ReadOnly
          label="Appellant Address"
          spacing={0}
          text={
            <AddressLine
              addressCity="Orlando"
              addressLine1="1234 Main Street"
              addressState="FL"
              addressZip="12345"
              name="Abellona Valtas"
              spacing={5}
            />
          }
        />
      </div>
      <Connect(RegionalOfficeDropdown)
        onChange={[Function]}
        validateValueOnMount={true}
        value="RO17"
      />
      <Connect(AppealHearingLocationsDropdown)
        appealId="3afefa82-5736-47c8-a977-0b4b8586f73e"
        key="hearingLocation__RO17"
        onChange={[Function]}
        regionalOffice="RO17"
        value={null}
      />
      <Connect(HearingDateDropdown)
        key="hearingDate__RO17"
        onChange={[Function]}
        regionalOffice="RO17"
      />
      <HearingTime
        componentIndex={0}
        enableZone={true}
        label="Hearing Time"
        onChange={[Function]}
        value="06:00"
        vertical={true}
      />
    </div>
  </AppSegment>
  <Button
    classNames={
      Array [
        "cf-submit",
      ]
    }
    linkStyling={true}
    loading={false}
    name="Cancel"
    onClick={[Function]}
    styling={
      Object {
        "data-css-14x0t8z": "",
      }
    }
    type="button"
    willNeverBeLoading={false}
  >
    Cancel
  </Button>
  <span
    data-css-jf1dde=""
  >
    <Button
      className="usa-button"
      classNames={
        Array [
          "cf-submit",
        ]
      }
      linkStyling={false}
      loading={false}
      name="Schedule"
      onClick={[Function]}
      type="button"
      willNeverBeLoading={false}
    >
      Schedule
    </Button>
  </span>
</Fragment>
`;

exports[`ScheduleVeteran Can submit the form 1`] = `
<Fragment>
  <AppSegment
    filledBackground={true}
  >
    <h1>
      Schedule Appellant for a Hearing
    </h1>
    <div
      data-css-16cycjp=""
    />
    <div
      className="usa-width-one-half"
    >
      <HearingTypeDropdown
        requestType="Video"
      />
    </div>
    <div
      className="cf-help-divider usa-width-one-whole"
    />
    <div
      className="usa-width-one-half"
    >
      <div
        data-css-18v9q72=""
      >
        <ReadOnly
          label="Appellant Address"
          spacing={0}
          text={
            <AddressLine
              addressCity="Orlando"
              addressLine1="1234 Main Street"
              addressState="FL"
              addressZip="12345"
              name="Abellona Valtas"
              spacing={5}
            />
          }
        />
      </div>
      <Connect(RegionalOfficeDropdown)
        onChange={[Function]}
        validateValueOnMount={true}
        value="RO17"
      />
      <Connect(AppealHearingLocationsDropdown)
        appealId="3afefa82-5736-47c8-a977-0b4b8586f73e"
        key="hearingLocation__RO17"
        onChange={[Function]}
        regionalOffice="RO17"
        value={null}
      />
      <Connect(HearingDateDropdown)
        key="hearingDate__RO17"
        onChange={[Function]}
        regionalOffice="RO17"
      />
      <HearingTime
        componentIndex={0}
        enableZone={true}
        label="Hearing Time"
        onChange={[Function]}
        value="06:00"
        vertical={true}
      />
    </div>
  </AppSegment>
  <Button
    classNames={
      Array [
        "cf-submit",
      ]
    }
    linkStyling={true}
    loading={false}
    name="Cancel"
    onClick={[Function]}
    styling={
      Object {
        "data-css-14x0t8z": "",
      }
    }
    type="button"
    willNeverBeLoading={false}
  >
    Cancel
  </Button>
  <span
    data-css-jf1dde=""
  >
    <Button
      className="usa-button"
      classNames={
        Array [
          "cf-submit",
        ]
      }
      linkStyling={false}
      loading={false}
      name="Schedule"
      onClick={[Function]}
      type="button"
      willNeverBeLoading={false}
    >
      Schedule
    </Button>
  </span>
</Fragment>
`;

exports[`ScheduleVeteran Displays hearing form when regional office is selected 1`] = `
<Fragment>
  <AppSegment
    filledBackground={true}
  >
    <h1>
      Schedule Appellant for a Hearing
    </h1>
    <div
      data-css-16cycjp=""
    />
    <div
      className="usa-width-one-half"
    >
      <HearingTypeDropdown
        requestType="Video"
      />
    </div>
    <div
      className="cf-help-divider usa-width-one-whole"
    />
    <div
      className="usa-width-one-half"
    >
      <div
        data-css-18v9q72=""
      >
        <ReadOnly
          label="Appellant Address"
          spacing={0}
          text={
            <AddressLine
              addressCity="Orlando"
              addressLine1="1234 Main Street"
              addressState="FL"
              addressZip="12345"
              name="Abellona Valtas"
              spacing={5}
            />
          }
        />
      </div>
      <Connect(RegionalOfficeDropdown)
        onChange={[Function]}
        validateValueOnMount={true}
        value="RO17"
      />
      <Connect(AppealHearingLocationsDropdown)
        appealId="3afefa82-5736-47c8-a977-0b4b8586f73e"
        key="hearingLocation__RO17"
        onChange={[Function]}
        regionalOffice="RO17"
        value={null}
      />
      <Connect(HearingDateDropdown)
        key="hearingDate__RO17"
        onChange={[Function]}
        regionalOffice="RO17"
      />
      <HearingTime
        componentIndex={0}
        enableZone={true}
        label="Hearing Time"
        onChange={[Function]}
        value="06:00"
        vertical={true}
      />
    </div>
  </AppSegment>
  <Button
    classNames={
      Array [
        "cf-submit",
      ]
    }
    linkStyling={true}
    loading={false}
    name="Cancel"
    onClick={[Function]}
    styling={
      Object {
        "data-css-14x0t8z": "",
      }
    }
    type="button"
    willNeverBeLoading={false}
  >
    Cancel
  </Button>
  <span
    data-css-jf1dde=""
  >
    <Button
      className="usa-button"
      classNames={
        Array [
          "cf-submit",
        ]
      }
      linkStyling={false}
      loading={false}
      name="Schedule"
      onClick={[Function]}
      type="button"
      willNeverBeLoading={false}
    >
      Schedule
    </Button>
  </span>
</Fragment>
`;

exports[`ScheduleVeteran Matches snapshot with default props 1`] = `
<Fragment>
  <AppSegment
    filledBackground={true}
  >
    <h1>
      Schedule Appellant for a Hearing
    </h1>
    <div
      data-css-16cycjp=""
    />
    <div
      className="usa-width-one-half"
    >
      <HearingTypeDropdown
        requestType="Video"
      />
    </div>
    <div
      className="cf-help-divider usa-width-one-whole"
    />
    <div
      className="usa-width-one-half"
    >
      <div
        data-css-18v9q72=""
      >
        <ReadOnly
          label="Appellant Address"
          spacing={0}
          text={
            <AddressLine
              addressCity="Orlando"
              addressLine1="1234 Main Street"
              addressState="FL"
              addressZip="12345"
              name="Abellona Valtas"
              spacing={5}
            />
          }
        />
      </div>
      <Connect(RegionalOfficeDropdown)
        onChange={[Function]}
        validateValueOnMount={true}
      />
    </div>
  </AppSegment>
  <Button
    classNames={
      Array [
        "cf-submit",
      ]
    }
    linkStyling={true}
    loading={false}
    name="Cancel"
    onClick={[Function]}
    styling={
      Object {
        "data-css-14x0t8z": "",
      }
    }
    type="button"
    willNeverBeLoading={false}
  >
    Cancel
  </Button>
  <span
    data-css-jf1dde=""
  >
    <Button
      className="usa-button"
      classNames={
        Array [
          "cf-submit",
        ]
      }
      linkStyling={false}
      loading={false}
      name="Schedule"
      onClick={[Function]}
      type="button"
      willNeverBeLoading={false}
    >
      Schedule
    </Button>
  </span>
</Fragment>
`;
